# hydra

./: .gitignore  CONTRIBUTING.md  LICENSE  README.rst  cookiecutter.json
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  Makefile  README.rst  docker-compose.yml  requirements-worker.txt  requirements.txt  run
{{cookiecutter.project_slug}}/docker-compose-files/: docker-compose.local.yml
{{cookiecutter.project_slug}}/docker-files/: barebones.local.dockerfile  barebones.worker.dockerfile  local.dockerfile  worker.dockerfile
{{cookiecutter.project_slug}}/envs/local/: local.env  postgresql.env  rabbitmq.env  worker.env
{{cookiecutter.project_slug}}/requirements/api/: pyproject.toml
{{cookiecutter.project_slug}}/requirements/worker/: pyproject.toml
{{cookiecutter.project_slug}}/resources/nginx/certs/: server.crt  server.key
{{cookiecutter.project_slug}}/resources/nginx/conf/: application.conf
{{cookiecutter.project_slug}}/workspace/: gunicorn_conf.py  start-tests.sh  start-worker.sh  start.sh
{{cookiecutter.project_slug}}/workspace/alembic/: env.py
{{cookiecutter.project_slug}}/workspace/alembic/versions/: 2b82095d54c4_initial_tables.py
{{cookiecutter.project_slug}}/workspace/app/: main.py  tests_pre_start.py
{{cookiecutter.project_slug}}/workspace/app/core/: celeryconfig.py  config.py
{{cookiecutter.project_slug}}/workspace/app/crud/: base.py  crud_user.py
{{cookiecutter.project_slug}}/workspace/app/db/: base.py  base_class.py  init_db.py
{{cookiecutter.project_slug}}/workspace/app/models/: user.py
{{cookiecutter.project_slug}}/workspace/app/schemas/: task.py  user.py
{{cookiecutter.project_slug}}/workspace/app/scripts/: backend_pre_start.py  healthcheck.py  initial_data.py
{{cookiecutter.project_slug}}/workspace/app/tasks/: base.py  celery.py  config.py  task.py
{{cookiecutter.project_slug}}/workspace/scripts/: format-imports.sh  format.sh  lint.sh  tests.sh
(+13 files in other folders)
