[tool.poetry]
name = "api"
version = "0.1.0"
description = "Project Requirements for Thresher API"
authors = ["Aaditya Panikath <aadityarajeev@gmail.com>"]

[tool.poetry.dependencies]
alembic = "^1.4.2"
celery = "^4.4.7"
email-validator = "^1.1.1"
fastapi = "^0.61.1"
gunicorn = "^20.0.4"
loguru = "^0.5.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
pika = "^1.1.0"
psycopg2-binary = "^2.8.5"
python = "^3.7"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
python-multipart = "^0.0.5"
requests = "^2.24.0"
sqlalchemy = "^1.3.19"
tenacity = "^6.2.0"
ujson = "^3.1.0"
uvicorn = "^0.11.8"
msgpack-python = "^0.5.6"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.1"
mypy = "^0.782"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
