[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Project Requirements for Thresher Worker"
authors = ["Aaditya Panikath <aadityarajeev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^4.4.7"
loguru = "^0.5.1"
sqlalchemy = "^1.3.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
