[tool.poetry]
name = "worker"
version = "0.1.0"
description = "Project Requirements for Hydra Worker"
authors = ["Aaditya Panikath <aadityarajeev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "^5.0.0"
loguru = "^0.5.1"
sqlalchemy = "^1.3.19"
msgpack-python = "^0.5.6"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
